# deja-dup

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  HACKING.md  LICENSE.md  Makefile  NEWS  NEWS.md  PACKAGING.md  README.md  deja-dup.doap  demo.sh  meson.build  meson_options.txt  vala-lint.conf
app/: Assistant.vala  AssistantBackup.vala  AssistantLocation.vala  AssistantOperation.vala  AssistantRestore.vala  Background.vala  Browser.vala  ConfigAutoBackup.vala  ConfigAutoBackupRow.vala  ConfigFolderGroup.vala  ConfigFolderPage.vala  ConfigLocationCombo.vala  ConfigLocationGroup.vala  ConfigLocationRow.vala  ConfigResticRow.vala  ConfigServerEntry.vala  ConfigSwitch.vala  DebugInfo.vala  DynamicPreferencesGroup.vala  ExcludeHelpButton.vala  FileStore.vala  FolderChooserButton.vala  HeaderBar.vala  HelpButton.vala  MainHeaderBar.vala  MainWindow.vala  Notifications.vala  OverviewPage.vala  OverviewToolbarView.vala  PassphraseDialog.vala  PreferencesWindow.vala  PrimaryMenuButton.vala  RecentBackupRow.vala  RestoreFileTester.vala  RestoreHeaderBar.vala  RestoreToolbarView.vala  ServerAddressHelp.vala  ServerHintPopover.vala  SwitchRow.vala  TimeCombo.vala  (+4 more)
data/: access-granted.html  access-granted.html.in  app.desktop.in  app.gschema.xml.in  app.metainfo.xml.in  deja-dup.1  meson.build  monitor.desktop.in  org.gnome.DejaDup.Monitor.desktop.in  org.gnome.DejaDup.appdata.xml.in  org.gnome.DejaDup.desktop.in  org.gnome.DejaDup.gschema.xml  org.gnome.DejaDup.gschema.xml.in  org.gnome.DejaDup.metainfo.xml.in  org.gnome.DejaDup.policy.in  org.gnome.DejaDup.service.in  post-install.sh  pydrive-credentials.json  pydrive-settings.yaml  resources.xml
data/icons/: deja-dup-google-drive.png.license
data/screenshots/: folders.png.license
data/ui/: Browser.ui  BrowserGridItem.ui  ConfigAutoBackupRow.ui  ConfigFolderGroup.ui  ConfigFolderList.ui  ConfigFolderPage.ui  ConfigFolderRow.ui  ConfigLocationCombo.ui  ConfigLocationGrid.ui  ConfigLocationGroup.ui  ConfigLocationRow.ui  ConfigServerEntry.ui  ExcludeHelpButton.ui  HeaderBar.ui  HelpButton.ui  MainHeaderBar.ui  MainWindow.ui  OverviewPage.ui  OverviewToolbarView.ui  PassphraseDialog.ui  PreferencesWindow.ui  PrimaryMenuButton.ui  RecentBackupRow.ui  RestoreToolbarView.ui  ServerAddressHelp.ui  ServerHintPopover.ui  SwitchRow.ui  TimeCombo.ui  WelcomePage.ui  debug.ui  help-overlay.ui  main.ui  menus.ui  preferences.ui  restore-missing.ui  server-hint.ui
deja-dup/: Assistant.vala  AssistantBackup.vala  AssistantLocation.vala  AssistantOperation.vala  AssistantRestore.vala  AssistantRestoreMissing.vala  Background.vala  Browser.vala  Builder.vala  BuilderWidget.vala  ConfigAutoBackup.vala  ConfigAutoBackupRow.vala  ConfigChoice.vala  ConfigComboRow.vala  ConfigDelete.vala  ConfigDeleteRow.vala  ConfigFolderList.vala  ConfigFolderPage.vala  ConfigFolderRow.vala  ConfigLocationCombo.vala  ConfigLocationGrid.vala  ConfigLocationRow.vala  ConfigPeriod.vala  ConfigPeriodRow.vala  ConfigRestic.vala  ConfigServerEntry.vala  ConfigStatusLabel.vala  DebugInfo.vala  FileStore.vala  HeaderBar.vala  MainHeaderBar.vala  MainWindow.vala  MountOperationAssistant.vala  Notifications.vala  PassphraseDialog.vala  Preferences.vala  PreferencesWindow.vala  Prompt.vala  RecentBackupRow.vala  RestoreFileTester.vala  (+6 more)
deja-dup/config/: ConfigAutoBackup.vala  ConfigChoice.vala  ConfigLocationGrid.vala  ConfigLocationRow.vala  ConfigStatusLabel.vala
deja-dup/help/: README.md  ar.po  bs.po  cs.po  da.po  el.po  en_GB.po  es.po  eu.po  fi.po  he.po  hr.po  hu.po  ja.po  ku.po  my.po  nb.po  oc.po  org.gnome.DejaDup.pot  ps.po  pt_BR.po  ru.po  th.po  tr.po  vi.po  zh_TW.po
deja-dup/monitor/: README.md  meson.build  monitor.vala
deja-dup/nautilus/: NautilusExtension.c  NautilusExtension.h
deja-dup/widgets/: Background.vala  ConfigBool.vala  ConfigChoice.vala  ConfigDelete.vala  ConfigEntry.vala  ConfigFolder.vala  ConfigLabel.vala  ConfigLabelBackupDate.vala  ConfigLabelDescription.vala  ConfigLabelLocation.vala  ConfigList.vala  ConfigLocation.vala  ConfigLocationCustom.vala  ConfigLocationDrive.vala  ConfigLocationFile.vala  ConfigLocationGCS.vala  ConfigLocationGoogle.vala  ConfigLocationLocal.vala  ConfigLocationOpenstack.vala  ConfigLocationRackspace.vala  ConfigLocationRemote.vala  ConfigLocationS3.vala  ConfigLocationTable.vala  ConfigLocationUnsupported.vala  ConfigLocationVolume.vala  ConfigPeriod.vala  ConfigWidget.vala  WidgetUtils.vala  meson.build
help/: LINGUAS  README.md  af.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  deja-dup.pot  el.po  en_AU.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ku.po  lt.po  meson.build  my.po  nb.po  nl.po  oc.po  pa.po  pl.po  post-install.sh  ps.po  pt_BR.po  ru.po  (+10 more)
help/C/: backup-auto.page  backup-first.page  (+10 more)
libdeja/: Backend.vala  BackendAuto.vala  BackendDrive.vala  BackendFile.vala  BackendGCS.vala  BackendGOA.vala  BackendGoogle.vala  BackendLocal.vala  BackendMicrosoft.vala  BackendOAuth.vala  BackendOpenstack.vala  BackendRackspace.vala  BackendRemote.vala  BackendS3.vala  BackendUnsupported.vala  BackendWatcher.vala  CommonUtils.vala  DirHandling.vala  FileTree.vala  FilteredSettings.vala  InstallEnv.vala  InstallEnvFlatpak.vala  InstallEnvSnap.vala  LogObscurer.vala  Network.vala  Operation.vala  OperationBackup.vala  OperationFiles.vala  OperationRestore.vala  OperationStatus.vala  OperationVerify.vala  README.md  Rclone.vala  RecursiveDelete.vala  RecursiveMove.vala  RecursiveOp.vala  ToolJob.vala  ToolPlugin.vala  meson.build
monitor/: BackupInterface.vala  GameMode.vala  ReadyWatcher.vala  Scheduler.vala  meson.build  monitor.vala
nautilus/: NautilusExtension.c  meson.build
po/: LINGUAS  POTFILES.in  af.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  cs.po  cy.po  da.po  de.po  deja-dup.pot  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fur.po  fy.po  gd.po  gl.po  he.po  hi.po  hr.po  (+59 more)
(+192 files in other folders)
