# -*- Mode: Meson; indent-tabs-mode: nil; tab-width: 4 -*-
#
# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Michael Terry

deja_dup = executable('deja-dup',
    ['main.vala',
     'Assistant.vala',
     'AssistantBackup.vala',
     'AssistantLocation.vala',
     'AssistantOperation.vala',
     'AssistantRestore.vala',
     'Background.vala',
     'Browser.vala',
     'ConfigAutoBackup.vala',
     'ConfigAutoBackupRow.vala',
     'ConfigComboRow.vala',
     'ConfigDeleteRow.vala',
     'ConfigFolderList.vala',
     'ConfigFolderPage.vala',
     'ConfigFolderRow.vala',
     'ConfigLocationCombo.vala',
     'ConfigLocationGrid.vala',
     'ConfigPeriodRow.vala',
     'ConfigRestic.vala',
     'ConfigServerEntry.vala',
     'ConfigSwitch.vala',
     'DebugInfo.vala',
     'FileStore.vala',
     'FolderChooserButton.vala',
     'MainHeaderBar.vala',
     'MainWindow.vala',
     'MountOperationAssistant.vala',
     'Notifications.vala',
     'OverviewPage.vala',
     'PassphraseDialog.vala',
     'PreferencesWindow.vala',
     'RecentBackupRow.vala',
     'RestoreFileTester.vala',
     'ServerHintPopover.vala',
     'TimeCombo.vala',
     'TooltipBox.vala',
     'WelcomePage.vala',
     'WidgetUtils.vala',
    ] + resources,
    vala_args: [
        '--gresourcesdir=@0@/data/ui'.format(meson.project_source_root()),
    ],
    dependencies: [
        adwaita_dep,
        gio_unix_dep,
        gtk_dep,
        gtk_wayland_dep,
        gtk_x11_dep,
        packagekit_dep,
        secret_dep,
    ],
    link_with: [libdeja],
    include_directories: [libdeja_inc],
    install: true,
    install_rpath: pkglibdir)

