# -*- Mode: Meson; indent-tabs-mode: nil; tab-width: 4 -*-
#
# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Michael Terry

deja_dup = executable('deja-dup',
    ['main.vala',
     'Assistant.vala',
     'AssistantBackup.vala',
     'AssistantLocation.vala',
     'AssistantOperation.vala',
     'AssistantRestore.vala',
     'Background.vala',
     'Browser.vala',
     'ConfigAutoBackup.vala',
     'ConfigComboRow.vala',
     'ConfigDeleteRow.vala',
     'ConfigFolderList.vala',
     'ConfigFolderPage.vala',
     'ConfigFolderRow.vala',
     'ConfigLocationCombo.vala',
     'ConfigLocationGrid.vala',
     'ConfigPeriodRow.vala',
     'ConfigServerEntry.vala',
     'ConfigStatusLabel.vala',
     'DebugInfo.vala',
     'FileStore.vala',
     'MainHeaderBar.vala',
     'MainWindow.vala',
     'MountOperationAssistant.vala',
     'Notifications.vala',
     'PassphraseDialog.vala',
     'PreferencesWindow.vala',
     'RestoreFileTester.vala',
     'ServerHintPopover.vala',
     'TimeCombo.vala',
     'WidgetUtils.vala',
    ] + resources,
    vala_args: [
        '--gresourcesdir=@0@/data/ui'.format(meson.source_root()),
        '--pkg=gtk4-fixes',
    ] + common_vflags,
    c_args: common_cflags,
    dependencies: [
        gio_unix_dep,
        gtk_dep,
        handy_dep,
        packagekit_dep,
        secret_dep,
    ],
    link_with: [libdeja],
    include_directories: [libdeja_inc],
    install: true,
    install_rpath: pkglibdir)

